moved current version to live folder

--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -79,27 +79,49 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 							<div class="btn-toolbar">
 								<div class="btn-group">
 									<button class="btn btn-inverse">Insert Link</button>
-									<button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown">
+									<button class="btn btn-inverse dropdown-toggle"
+										data-toggle="dropdown">
 										<span class="caret"></span>
 									</button>
 									<ul class="dropdown-menu">
 										<li><a href="#">To New Page</a></li>
 										<li><a href="#">To Hyperlink</a></li>
-										
+
 									</ul>
-									
+
 								</div>
-								 <div class="btn-group">
+								<div class="btn-group">
 									<button class="btn btn-inverse">Share</button>
-								</div> 
+								</div>
 							</div>
 						</div>
 						<div class="row-fluid">
 							<div class="span6">
-								<div class="editor">Edit</div>
+								<div class="editor">
+
+									<div class="row-fluid">
+										<div class="span12">Edit</div>
+									</div>
+									<div class="row-fluid">
+										<div class="editorContent">
+											<textarea class="textArea"></textarea>
+										</div>
+									</div>
+
+
+								</div>
 							</div>
 							<div class="span6">
-								<div class="view">View</div>
+								<div class="browser">
+									<div class="row-fluid">
+										<div class="span12">View + Browse</div>
+									</div>
+									<div class="row-fluid">
+										<div class="editorContent">
+											<div class="viewContent"></div>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -184,33 +206,23 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 	<script>
 // 
-<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-edit-js-0.0.4") -->
+<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-edit-js-0.0.5") -->
 // 
 </script>
+
 
 	<script>
 // 
-<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-edit-app-js-0.0.41") -->
-// 
-</script>
-
-	<script>
-// 
-<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-view-0.0.31") -->
+<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-view-0.0.4") -->
 
 // 
 </script>
 
-	<script>
-// view embed start 
 
-<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-view-app-0.0.31") -->
+<script>
 
-// view embed end 
+
 </script>
-
-
-
 
 	<script>
 
