building app module

--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -220,7 +220,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 
 <script>
-
+<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/nodejump-app-0.0.1") -->
 
 </script>
 
@@ -236,6 +236,8 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 		
 		var lastInjectedHashValue = null;
 		
+		
+		var nodejump = $.initNodeJumpApp({elem: $("#nodejumpapp")});
 		
 		
 		$(window).hashchange( function(){
