--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -222,6 +222,9 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 
 	<script>
+// 	
+<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/nodejump-app-0.0.1") -->
+// 
 </script>
 
 	<script>
@@ -243,7 +246,9 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 		nodejump.initComponents();
 		
 		
-		nodejump.load(client.reference("http://slicnet.com/mxrogm/mxrogm/apps/edit/docs/2/4/doc"), "wrongsecret", function() {
+		
+		
+		nodejump.load(client.reference("http://slicnet.com/mxrogm/mxrogm/apps/edit/docs/6/1/doc"), "Y01AgPqXUviv", function() {
 			
 		} );
 		
