--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -170,6 +170,12 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 // 	
 </script>
 
+<script>
+// 
+<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-common-0.0.1") -->
+// 
+</script>
+
 	<script>
 // 
 <!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-navbar-js-0.0.2") -->
