--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -92,7 +92,9 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 								</ul>
 
 							</div>
+							<p>Your <b>public</b> page is at: <span class="pageUrl">http://slicnet.com/yournode</span></p>
 							<div class="btn-group">
+								<button class="btn btn-inverse">Publish</button>
 								<button class="btn btn-inverse">Share</button>
 							</div>
 						</div>
@@ -251,7 +253,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 		
 		nodejump.initComponents();
 		
-		nodejump.load(client.reference("http://slicnet.com/mxrogm/mxrogm/apps/edit/docs/6/1/doc"), "Y01AgPqXUviv", function() {
+		nodejump.initForAnonymous(function() {
 			nodejump.startAutoCommit();
 			nodejump.startAutoRefresh();
 		} );
