--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -253,7 +253,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 		
 		nodejump.initComponents();
 		
-		nodejump.initForAnonymous(function() {
+		nodejump.initForUser(function() {
 			nodejump.startAutoCommit();
 			nodejump.startAutoRefresh();
 		} );
