working on insert link feature

--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -80,13 +80,13 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 					<div class="row-fluid">
 						<div class="btn-toolbar">
 							<div class="btn-group">
-								<button class="btn btn-inverse">Insert Link</button>
+								<button class="insertLinkButton btn btn-inverse">Insert Link</button>
 								<button class="btn btn-inverse dropdown-toggle"
 									data-toggle="dropdown">
 									<span class="caret"></span>
 								</button>
 								<ul class="dropdown-menu">
-									<li><a href="#">To New Page</a></li>
+									<li><a class="insertLinkButton" href="#">To New Page</a></li>
 									<li><a href="#">To Hyperlink</a></li>
 
 								</ul>
