add show children

--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -126,6 +126,26 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 								<div class="row-fluid">
 									<div class="viewComponent">
 										<div class="viewContent"></div>
+										<div class="viewChildren row-fluid">
+
+											<div class="span12">
+												<hr />
+												<div class="childrenList collapse">
+													<ul class="childrenItems nav nav-tabs nav-stacked">
+														<!-- one.nodechildren -->
+														<!--  format <li><a href="#">Child document 1</a></li> -->
+													</ul>
+												</div>
+
+
+
+												<button class="toggleChildrenButton btn btn-info btn-mini">
+													<i class="icon-plus icon-white"></i> Show Children
+												</button>
+
+											</div>
+
+										</div>
 									</div>
 								</div>
 							</div>
@@ -140,8 +160,8 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 						</div>
 						<div class="modal-body">
 							<form>
-								<legend>Specify the title of the new document to be
-									linked here.</legend>
+								<!-- <legend>Specify the title of the new document to be
+									linked here.</legend> -->
 								<label>Title of new document</label> <input
 									class="documentTitleDialog-title" type="text"
 									placeholder="Title ...">
