--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -29,10 +29,12 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 	color: #aaa !important;
 }
 
+.border {
+	border: 1px solid black;
+}
+
 .CodeMirror {
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
-	border-right: 1px solid black;
+	
 	font-size: 12pt;
 }
 
@@ -42,7 +44,11 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 	overflow-x: auto;
 }
 </style>
-
+<!-- 
+/*border-top: 1px solid black;
+	//border-bottom: 1px solid black;
+	//border-right: 1px solid black;
+ -->
 
 </head>
 <body>
@@ -78,37 +84,44 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 
 					<div class="row-fluid">
-						<div class="btn-toolbar">
-							<div class="btn-group">
-								<button class="insertLinkButton btn btn-inverse">Insert
-									Link</button>
-								<button class="btn btn-inverse dropdown-toggle"
-									data-toggle="dropdown">
-									<span class="caret"></span>
-								</button>
-								<ul class="dropdown-menu">
-									<li><a class="insertLinkButton" href="#">To New Page</a></li>
-									<li><a href="#">To Hyperlink</a></li>
+						<div class="span6">
+							<div class="btn-toolbar">
+								<!-- <div class="btn-group">
+									<button disabled class="backToParentButton btn btn-inverse">
+										Back to Parent</button>
+								</div> -->
+								<div class="btn-group">
+									<button class="insertLinkButton btn btn-large btn-inverse">Insert
+										Link</button>
+									<button class="btn btn-large btn-inverse dropdown-toggle"
+										data-toggle="dropdown">
+										<span class="caret"></span>
+									</button>
+									<ul class="dropdown-menu">
+										<li><a class="insertLinkButton" href="#">To New Page</a></li>
+										<li><a href="#">To Hyperlink</a></li>
 
-								</ul>
+									</ul>
 
-							</div>
-							<p>
+								</div>
+								<!-- <p>
 								Your <b>public</b> page is at: <span class="pageUrl">http://slicnet.com/yournode</span>
-							</p>
-							<div class="btn-group">
-								<button class="btn btn-inverse">Publish</button>
-								<button class="btn btn-inverse">Share</button>
+							</p> -->
+								<!-- <div class="btn-group">
+									<button class="btn btn-inverse">Publish</button>
+									<button class="btn btn-inverse">Share</button>
+								</div> -->
 							</div>
 						</div>
+
 					</div>
 					<div class="row-fluid">
-						<div class="span6">
+						<div class="span6" style="border-right: 1px solid black;">
 							<div class="editor">
 
-								<div class="row-fluid">
-									<div class="span12">Edit</div>
-								</div>
+								<!-- <div class="border row-fluid">
+									<div class="span12"><small>Edit</small></div>
+								</div>  -->
 								<div class="row-fluid">
 									<div class="editorContent" style="display: none">
 										<textarea class="textArea"></textarea>
@@ -118,14 +131,14 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 							</div>
 						</div>
-						<div class="span6">
+						<div class="span6" style="border-top: 1px solid #585858;">
 							<div class="browser">
-								<div class="row-fluid">
-									<div class="span12">Preview + Browse</div>
-								</div>
+								<!--  <div class="row-fluid" style="margin-bottom: -10px;" style="border-bottom: 1px solid black;">
+									<div class="span12"><small>Preview + Browse</small></div>
+								</div> -->
 								<div class="row-fluid">
 									<div class="viewComponent">
-										<div class="viewContent"></div>
+										<div class="viewContent" ></div>
 										<div class="viewChildren row-fluid">
 
 											<div class="span12">
@@ -148,6 +161,11 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 										</div>
 									</div>
 								</div>
+								<!-- <div class="row-fluid">
+									<div class="span6">
+										<small>Showing <span class="currentUrl"><a href="#"></a></span></small>.
+									</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
