--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -115,7 +115,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 					</div>
 					<div class="row-fluid">
-						<div class="span6" style="border-right: 1px solid black;">
+						<div class="span6" style="border-right: 1px solid #E0E0E0;">
 							<div class="editor">
 
 								<!-- <div class="border row-fluid">
@@ -130,7 +130,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 							</div>
 						</div>
-						<div class="span6" style="border-top: 1px solid #585858;">
+						<div class="span6" style="border-top: 1px solid #E0E0E0;">
 							<div class="browser">
 								<!--  <div class="row-fluid" style="margin-bottom: -10px;" style="border-bottom: 1px solid black;">
 									<div class="span12"><small>Preview + Browse</small></div>
@@ -138,14 +138,13 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 								<div class="row-fluid">
 									<div class="viewComponent">
 										<div class="viewContent"></div>
-										<div class="viewChildren row-fluid">
+										<!-- <div class="viewChildren row-fluid">
 
 											<div class="span12">
 												<hr />
 												<div class="childrenList collapse">
 													<ul class="childrenItems nav nav-tabs nav-stacked">
-														<!-- one.nodechildren -->
-														<!--  format <li><a href="#">Child document 1</a></li> -->
+														
 													</ul>
 												</div>
 
@@ -157,7 +156,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 											</div>
 
-										</div>
+										</div> -->
 									</div>
 								</div>
 								<!-- <div class="row-fluid">
@@ -369,6 +368,11 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 			nodejump.stopAutoRefresh();
 		});
 
+		$(window).unload(function() {
+			nodejump.stopAutoCommit();
+			nodejump.stopAutoRefresh();
+		});
+		
 	}
 
 	function AJ_engineLoaded(aj) {
