--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -98,7 +98,8 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 									</button>
 									<ul class="dropdown-menu">
 										<li><a class="insertLinkButton" href="#">To New Page</a></li>
-										<li><a href="#">To Hyperlink</a></li>
+										<li><a href="#">As Hyperlink</a></li>
+
 
 									</ul>
 
@@ -110,6 +111,21 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 									<button class="btn btn-inverse">Publish</button>
 									<button class="btn btn-inverse">Share</button>
 								</div> -->
+							</div>
+						</div>
+						<div class="span6">
+							<div class="row-fluid">
+								<div class="span6" style="font-size: 8pt; color: #E0E0E0">
+									<table>
+										<tr style="vertical-align: bottom;">
+											<td><span class="currentUrl" style=""> <a
+													href="#"></a></span></td>
+											<td><a href="#">Share</a></td>
+										</tr>
+									</table>
+
+
+								</div>
 							</div>
 						</div>
 
@@ -159,11 +175,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 										</div> -->
 									</div>
 								</div>
-								<!-- <div class="row-fluid">
-									<div class="span6">
-										<small>Showing <span class="currentUrl"><a href="#"></a></span></small>.
-									</div>
-								</div> -->
+
 							</div>
 						</div>
 					</div>
