--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -114,13 +114,14 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 							</div>
 						</div>
 						<div class="span6">
-							<div class="row-fluid">
-								<div class="span6" style="font-size: 8pt; color: #E0E0E0">
+							<div class="row-fluid" style="margin-top: 28px;">
+								<div class="span6" style="font-size: 8pt; color: #585858;">
 									<table>
 										<tr style="vertical-align: bottom;">
-											<td><span class="currentUrl" style=""> <a
+											<td>Previewing </td>
+											<td> <span class="currentUrl" style="color: #E0E0E0;"> <a
 													href="#"></a></span></td>
-											<td><a href="#">Share</a></td>
+											<td><a href="#" style="color: #585858;">Share</a></td>
 										</tr>
 									</table>
 
