--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -115,13 +115,17 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 						</div>
 						<div class="span6">
 							<div class="row-fluid" style="margin-top: 28px;">
-								<div class="span6" style="font-size: 8pt; color: #585858;">
+								<div class="span6" style="font-size: 8pt; color: #909090;">
 									<table>
 										<tr style="vertical-align: bottom;">
-											<td>Previewing </td>
-											<td> <span class="currentUrl" style="color: #E0E0E0;"> <a
-													href="#"></a></span></td>
-											<td><a href="#" style="color: #585858;">Share</a></td>
+											<td><span class="viewStatus">Loading</span></td>
+											<td><span class="currentUrl" style="color: #E0E0E0;">
+													<a href="#"></a>
+											</span></td>
+											<td><i class="icon-arrow-right"
+												style="opacity: 0.3; filter: alpha(opacity = 30);"></i></td>
+											<td><a
+												class="shareButton" href="#" style="color: #909090;">Share</a></td>
 										</tr>
 									</table>
 
@@ -141,6 +145,10 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 								<div class="row-fluid">
 									<div class="editorContent" style="display: none">
 										<textarea class="textArea"></textarea>
+									</div>
+									<div style="margin-left: 30px;">
+										<span class="editStatus"
+											style="font-size: 8pt; color: #909090;">Loading</span>
 									</div>
 								</div>
 
