improving status labels

--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -122,10 +122,10 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 											<td><span class="currentUrl" style="color: #E0E0E0;">
 													<a href="#"></a>
 											</span></td>
-											<td><i class="icon-arrow-right"
-												style="opacity: 0.3; filter: alpha(opacity = 30);"></i></td>
+											<td><i class="shareComonent icon-arrow-right"
+												style="display: none; opacity: 0.3; filter: alpha(opacity = 30);"></i></td>
 											<td><a
-												class="shareButton" href="#" style="color: #909090;">Share</a></td>
+												class="display: none; shareComponent shareButton" href="#" style="color: #909090;">Share</a></td>
 										</tr>
 									</table>
 
