--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -15,10 +15,12 @@
 <link rel="stylesheet"
 	href="http://appjangle.com/assets/v02/codemirror-2.32/codemirror.css">
 
-<link rel="stylesheet"
-	href="http://layout.jquery-dev.net/lib/css/layout-default.css">
+<!-- <link rel="stylesheet"
+	href="http://layout.jquery-dev.net/lib/css/layout-default.css"> -->
 
 <style>
+
+
 body {
 	background-image: url('http://u1.linnk.it/assets/v01/img/beige3.png');
 }
@@ -123,9 +125,9 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 													<a href="#"></a>
 											</span></td>
 											<td><i class="shareComponent icon-arrow-right"
-												style="display: none; opacity: 0.3; filter: alpha(opacity = 30);"></i></td>
-											<td><a
-												class="shareComponent shareButton" href="#" style="display: none; color: #909090;">Share</a></td>
+												style="display: none; opacity: 0.3; filter: alpha(opacity =     30);"></i></td>
+											<td><a class="shareComponent shareButton" href="#"
+												style="display: none; color: #909090;">Share</a></td>
 										</tr>
 									</table>
 
@@ -221,9 +223,6 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 	</div>
 
 
-
-
-
 	<script type="text/javascript" language="javascript"
 		src="http://appjangle.com/js/v01/onejs/onejs.nocache.js"></script>
 
@@ -233,12 +232,12 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
-	<script
-		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+	<!-- <script
+		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script> -->
 
 
-	<script src="http://methvin.com/splitter/splitter.js">
-	</script>
+	<!-- <script src="http://methvin.com/splitter/splitter.js">
+	</script> -->
 	<!-- <script
 		src="http://layout.jquery-dev.net/download/jquery.layout.min-1.2.0.js"></script> -->
 
