adding dependency to share ui

--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -19,8 +19,6 @@
 	href="http://layout.jquery-dev.net/lib/css/layout-default.css"> -->
 
 <style>
-
-
 body {
 	background-image: url('http://u1.linnk.it/assets/v01/img/beige3.png');
 }
@@ -29,10 +27,6 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 	{
 	background-color: #d9d9d9 !important;
 	color: #aaa !important;
-}
-
-.border {
-	border: 1px solid black;
 }
 
 .CodeMirror {
@@ -45,14 +39,14 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 	overflow-x: auto;
 }
 </style>
-<!-- 
-/*border-top: 1px solid black;
-	//border-bottom: 1px solid black;
-	//border-right: 1px solid black;
- -->
+
 
 </head>
 <body>
+
+	<div id="shareDialog">
+		<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-share-ui-html-0.0.1") -->
+	</div>
 
 	<div class="container-fluid">
 		<div id="ajnavbar">
@@ -125,7 +119,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 													<a href="#"></a>
 											</span></td>
 											<td><i class="shareComponent icon-arrow-right"
-												style="display: none; opacity: 0.3; filter: alpha(opacity =     30);"></i></td>
+												style="display: none; opacity: 0.3; filter: alpha(opacity =       30);"></i></td>
 											<td><a class="shareComponent shareButton" href="#"
 												style="display: none; color: #909090;">Share</a></td>
 										</tr>
@@ -278,6 +272,12 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 	<script>
 // 
 <!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-share-js-0.0.1") -->
+// 
+</script>
+
+	<script>
+// 
+<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-share-ui-js-0.0.1") -->
 // 
 </script>
 
