--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -44,9 +44,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 </head>
 <body>
 
-	<div id="shareDialog">
-		<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-share-ui-html-0.0.1") -->
-	</div>
+
 
 	<div class="container-fluid">
 		<div id="ajnavbar">
@@ -77,6 +75,9 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 			<div class="span12">
 				<div id="nodejumpapp">
 
+					<div id="shareDialog">
+						<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-share-ui-html-0.0.1") -->
+					</div>
 
 					<div class="row-fluid">
 						<div class="span6">
@@ -94,8 +95,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 									</button>
 									<ul class="dropdown-menu">
 										<li><a class="insertLinkButton" href="#">To New Page</a></li>
-										<li><a href="#">As Hyperlink</a></li>
-
+										<!-- <li><a href="#">As Hyperlink</a></li> -->
 
 									</ul>
 
@@ -119,7 +119,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 													<a href="#"></a>
 											</span></td>
 											<td><i class="shareComponent icon-arrow-right"
-												style="display: none; opacity: 0.3; filter: alpha(opacity =       30);"></i></td>
+												style="display: none; opacity: 0.3; filter: alpha(opacity =         30);"></i></td>
 											<td><a class="shareComponent shareButton" href="#"
 												style="display: none; color: #909090;">Share</a></td>
 										</tr>
