--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -80,86 +80,88 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 					</div>
 
 					<div class="row-fluid">
+
 						<div class="span6">
-							<div class="btn-toolbar">
-								<!-- <div class="btn-group">
-									<button disabled class="backToParentButton btn btn-inverse">
-										Back to Parent</button>
-								</div> -->
-								<div class="btn-group">
-									<button class="insertLinkButton btn btn-large btn-inverse">Insert
-										Link</button>
-									<button class="btn btn-large btn-inverse dropdown-toggle"
-										data-toggle="dropdown">
-										<span class="caret"></span>
-									</button>
-									<ul class="dropdown-menu">
-										<li><a class="insertLinkButton" href="#">To New Page</a></li>
-										<!-- <li><a href="#">As Hyperlink</a></li> -->
+							<div class="row-fluid">
+								<div class="span6">
+									<div class="btn-toolbar">
+										<div class="btn-group">
+											<button class="insertLinkButton btn btn-inverse">Insert
+												Link</button>
+											<button class="btn btn-inverse dropdown-toggle"
+												data-toggle="dropdown">
+												<span class="caret"></span>
+											</button>
+											<ul class="dropdown-menu">
+												<li><a class="insertLinkButton" href="#">To New
+														Page</a></li>
+												<!-- <li><a href="#">As Hyperlink</a></li> -->
 
-									</ul>
+											</ul>
 
+										</div>
+
+									</div>
 								</div>
-								<!-- <p>
-								Your <b>public</b> page is at: <span class="pageUrl">http://slicnet.com/yournode</span>
-							</p> -->
-								<!-- <div class="btn-group">
-									<button class="btn btn-inverse">Publish</button>
-									<button class="btn btn-inverse">Share</button>
-								</div> -->
+
+
 							</div>
-						</div>
-						<div class="span6">
-							<div class="row-fluid" style="margin-top: 28px;">
-								<div class="span6" style="font-size: 8pt; color: #909090;">
-									<table>
-										<tr style="vertical-align: bottom;">
-											<td><span class="viewStatus">Loading</span></td>
-											<td><span class="currentUrl" style="color: #E0E0E0;">
-													<a href="#"></a>
-											</span></td>
-											<td><i class="shareComponent icon-arrow-right"
-												style="display: none; opacity: 0.3; filter: alpha(opacity =         30);"></i></td>
-											<td><a class="shareComponent shareButton" href="#"
-												style="display: none; color: #909090;">Share</a></td>
-										</tr>
-									</table>
 
+							<div class="row-fluid">
 
-								</div>
-							</div>
-						</div>
+								<div class="span6" style="border-right: 1px solid #E0E0E0;">
+									<div class="editor">
 
-					</div>
-					<div class="row-fluid">
-						<div class="span6" style="border-right: 1px solid #E0E0E0;">
-							<div class="editor">
-
-								<!-- <div class="border row-fluid">
+										<!-- <div class="border row-fluid">
 									<div class="span12"><small>Edit</small></div>
 								</div>  -->
-								<div class="row-fluid">
-									<div class="editorContent" style="display: none">
-										<textarea class="textArea"></textarea>
+										<div class="row-fluid">
+											<div class="editorContent" style="display: none">
+												<textarea class="textArea"></textarea>
+											</div>
+											<div style="margin-left: 30px;">
+												<span class="editStatus"
+													style="font-size: 8pt; color: #909090;">Loading</span>
+											</div>
+										</div>
+
+
 									</div>
-									<div style="margin-left: 30px;">
-										<span class="editStatus"
-											style="font-size: 8pt; color: #909090;">Loading</span>
+								</div>
+							</div>
+
+							<div class="span6">
+								<div class="row-fluid">
+									<div class="span6">
+										<div class="row-fluid" style="margin-top: 28px;">
+											<div class="span6" style="font-size: 8pt; color: #909090;">
+												<table>
+													<tr style="vertical-align: bottom;">
+														<td><span class="viewStatus">Loading</span></td>
+														<td><span class="currentUrl" style="color: #E0E0E0;">
+																<a href="#"></a>
+														</span></td>
+														<td><i class="shareComponent icon-arrow-right"
+															style="display: none; opacity: 0.3; filter: alpha(opacity =                 30);"></i></td>
+														<td><a class="shareComponent shareButton" href="#"
+															style="display: none; color: #909090;">Share</a></td>
+													</tr>
+												</table>
+
+
+											</div>
+										</div>
 									</div>
 								</div>
 
-
-							</div>
-						</div>
-						<div class="span6" style="border-top: 1px solid #E0E0E0;">
-							<div class="browser">
-								<!--  <div class="row-fluid" style="margin-bottom: -10px;" style="border-bottom: 1px solid black;">
-									<div class="span12"><small>Preview + Browse</small></div>
-								</div> -->
 								<div class="row-fluid">
-									<div class="viewComponent">
-										<div class="viewContent"></div>
-										<!-- <div class="viewChildren row-fluid">
+									<div class="span6" style="border-top: 1px solid #E0E0E0;">
+										<div class="browser">
+											
+											<div class="row-fluid">
+												<div class="viewComponent">
+													<div class="viewContent"></div>
+													<!-- <div class="viewChildren row-fluid">
 
 											<div class="span12">
 												<hr />
@@ -178,11 +180,20 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 											</div>
 
 										</div> -->
+												</div>
+											</div>
+
+										</div>
 									</div>
 								</div>
 
 							</div>
+
 						</div>
+
+
+
+
 					</div>
 
 					<div class="documentTitleDialog modal hide fade">
