found bug, inserting not working any more

--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -134,12 +134,12 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 						<div class="span6">
 							<div class="row-fluid">
 								<div class="span12">
-									<div class="row-fluid" style="margin-top: 28px;">
+									<div class="row-fluid" >
 										<div class="span6" style="font-size: 8pt; color: #909090;">
 											<table>
 												<tr style="vertical-align: bottom;">
 													<td><span class="viewStatus">Loading</span></td>
-													<td><span class="currentUrl" style="color: #E0E0E0;">
+													<td><span class="currentUrl hidden-phone" style="color: #E0E0E0;">
 															<a href="#"></a>
 													</span></td>
 													<td><i class="shareComponent icon-arrow-right"
