--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -75,6 +75,30 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 			<div class="span12">
 				<div id="nodejumpapp">
 
+					<div class="documentTitleDialog modal hide fade">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal"
+								aria-hidden="true">&times;</button>
+							<h3>Insert Link to New Document</h3>
+						</div>
+						<div class="modal-body">
+							<form>
+								<!-- <legend>Specify the title of the new document to be
+									linked here.</legend> -->
+								<label>Title of new document</label> <input
+									class="documentTitleDialog-title" type="text"
+									placeholder="Title ...">
+							</form>
+						</div>
+						<div class="modal-footer">
+							<a href="#" class="documentTitleDialog-cancel btn">Cancel</a> <a
+								href="#"
+								class="documentTitleDialog-createDocument btn btn-primary">Create
+								Document</a>
+						</div>
+					</div>
+					
+
 					<div class="shareDialog" style="display: none;">
 						<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-share-ui-html-0.0.1") -->
 					</div>
@@ -134,16 +158,16 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 						<div class="span6">
 							<div class="row-fluid">
 								<div class="span12">
-									<div class="row-fluid" >
+									<div class="row-fluid">
 										<div class="span6" style="font-size: 8pt; color: #909090;">
 											<table>
 												<tr style="vertical-align: bottom;">
 													<td><span class="viewStatus">Loading</span></td>
-													<td><span class="currentUrl hidden-phone" style="color: #E0E0E0;">
-															<a href="#"></a>
+													<td><span class="currentUrl hidden-phone"
+														style="color: #E0E0E0;"> <a href="#"></a>
 													</span></td>
 													<td><i class="shareComponent icon-arrow-right"
-														style="display: none; opacity: 0.3; filter: alpha(opacity =                     30);"></i></td>
+														style="display: none; opacity: 0.3; filter: alpha(opacity =                       30);"></i></td>
 													<td><a class="shareComponent shareButton" href="#"
 														style="display: none; color: #909090;">Share</a></td>
 												</tr>
@@ -190,6 +214,9 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 						</div>
 					</div>
+
+					
+
 				</div>
 
 
@@ -197,34 +224,10 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 
 			</div>
 
-			<div class="documentTitleDialog modal hide fade">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-hidden="true">&times;</button>
-					<h3>Insert Link to New Document</h3>
-				</div>
-				<div class="modal-body">
-					<form>
-						<!-- <legend>Specify the title of the new document to be
-									linked here.</legend> -->
-						<label>Title of new document</label> <input
-							class="documentTitleDialog-title" type="text"
-							placeholder="Title ...">
-					</form>
-				</div>
-				<div class="modal-footer">
-					<a href="#" class="documentTitleDialog-cancel btn">Cancel</a> <a
-						href="#"
-						class="documentTitleDialog-createDocument btn btn-primary">Create
-						Document</a>
-				</div>
-			</div>
+
 
 		</div>
 
-
-	</div>
-	</div>
 
 	</div>
 
@@ -284,6 +287,12 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 	<script>
 // 
 <!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-share-js-0.0.1") -->
+// 
+</script>
+
+<script>
+// 
+<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/bootstrap-utils-js-0.0.1") -->
 // 
 </script>
 
