--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -99,7 +99,7 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 					</div>
 					
 
-					<div class="shareDialog" style="display: none;">
+					<div class="shareDialog" >
 						<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-share-ui-html-0.0.1") -->
 					</div>
 
