deployed new versions to their live locations

--- a/0.0.1/new-link-dialog-html-0.0.1.html
+++ b/0.0.1/new-link-dialog-html-0.0.1.html
@@ -1,4 +1,4 @@
-<!-- one.createPublic new-link-dialog-html-0.0.1 -->
+<!-- one.upload https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/new-link-dialog-html-0.0.1 -->
 
 
 <!-- one.end -->
