--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -75,28 +75,10 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 			<div class="span12">
 				<div id="nodejumpapp">
 
-					<div class="documentTitleDialog modal hide fade">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal"
-								aria-hidden="true">&times;</button>
-							<h3>Insert Link to New Document</h3>
-						</div>
-						<div class="modal-body">
-							<form>
-								<!-- <legend>Specify the title of the new document to be
-									linked here.</legend> -->
-								<label>Title of new document</label> <input
-									class="documentTitleDialog-title" type="text"
-									placeholder="Title ...">
-							</form>
-						</div>
-						<div class="modal-footer">
-							<a href="#" class="documentTitleDialog-cancel btn">Cancel</a> <a
-								href="#"
-								class="documentTitleDialog-createDocument btn btn-primary">Create
-								Document</a>
-						</div>
+					<div class="insertLinkDialog">
+						<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/new-link-dialog-html-0.0.1") -->
 					</div>
+					
 					
 
 					<div class="shareDialog" >
@@ -334,6 +316,11 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 // 
 </script>
 
+<script>
+// 
+<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/new-link-dialog-js-0.0.1") -->
+// 
+</script>
 
 	<script>
 // 	
