trying to fix issues afer reorganization

--- a/0.0.1/new-link-dialog-html-0.0.1.html
+++ b/0.0.1/new-link-dialog-html-0.0.1.html
@@ -1,6 +1,6 @@
 <!-- one.upload https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/new-link-dialog-html-0.0.1 -->
 
-<div class="insertLinkDialog">
+<div class="insertLinkDialog dialog" style="display: none;">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal"
 			aria-hidden="true">&times;</button>
