fixing small formatting isssues

--- a/0.0.1/nodejump-helpbar-html-0.0.1.html
+++ b/0.0.1/nodejump-helpbar-html-0.0.1.html
@@ -1,6 +1,8 @@
 <!-- one.upload https://u1.linnk.it/qc8sbw/usr/apps/textsync/docs/nodejump-helpbar-html-0.0.1 -->
 
 <div class="container-fluid">
+	
+	
 	<div class="row-fluid">
 		<div class="span12">
 			<div class="tabbable">
@@ -10,12 +12,14 @@
 						<li class="active"><a href="#help-tab1" class="noHelpButton"
 							data-toggle="tab">Hide Help</a></li>
 						<li><a href="#help-formatting-tab"
-							class="formattingReferenceButton" data-toggle="tab">Formatting</a></li>
+							class="formattingReferenceButton" data-toggle="tab"
+							style="color: black;">Formatting</a></li>
 						<li><a href="#help-linking-and-navigation-tab"
-							class="linkingAndNavigationReferenceButton" data-toggle="tab">Linking
-								and Navigation</a></li>
+							class="linkingAndNavigationReferenceButton" data-toggle="tab"
+							style="color: black;">Linking and Navigation</a></li>
 						<li><a href="#help-sharing-tab"
-							class="sharingReferenceButton" data-toggle="tab">Sharing</a></li>
+							class="sharingReferenceButton" data-toggle="tab"
+							style="color: black;">Sharing</a></li>
 					</ul>
 				</div>
 
@@ -43,7 +47,7 @@
 				<div class="tab-pane active" id="help-tab1"></div>
 
 				<div class="tab-pane" id="help-formatting-tab">
-					<div class="container">
+					<div class="container" style="margin-left: 25px;">
 						<div class="row">
 
 							<div class="span6">
@@ -260,6 +264,7 @@
 			</div>
 		</div>
 	</div>
+
 </div>
 
 <!-- one.end -->
