--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -38,6 +38,27 @@ a.disabled-link,a.disabled-link:visited,a.disabled-link:active,a.disabled-link:h
 	overflow-y: hidden;
 	overflow-x: auto;
 }
+
+/* for footer */
+.wrapper,.footer,.push {
+	margin: 0;
+}
+
+html,body {
+	height: 100%;
+}
+
+.wrapper {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -60px 0;
+}
+
+.footer,.push {
+	height: 60px;
+}
+/* footer end */
 </style>
 
 
