fixing small issues

--- a/live/app-nodejump.html
+++ b/live/app-nodejump.html
@@ -279,6 +279,12 @@ html,body {
 // 	
 </script>
 
+<script>
+// 
+<!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/textsync/docs/js-toolbox-0.0.1") -->
+// 
+</script>
+
 	<script>
 // 
 <!-- one.embedText("https://u1.linnk.it/qc8sbw/usr/apps/ajMicroSync/docs/aj-common-0.0.1") -->
